retrieveUnpackaged/objects/TQB_Letter_of_Intent__c.object
<CustomObject>
    <description>Letters that candidates fill out and submit to communicate their intent to pursue a promotion.</description>
    <fields>
        <fullName>Candidate_Address__c</fullName>
        <description>Candidates Address</description>
        <formula>$User.Street&amp; &quot; &quot; &amp; $User.City &amp; &quot; &quot; &amp; $User.State &amp; &quot; &quot; &amp;  $User.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Candidates Address</inlineHelpText>
        <label>Candidate Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <description>Users first and last name for display on the LOI</description>
        <formula>CreatedBy.FirstName &amp;&apos; &apos;  &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Users first and last name for display on the LOI</inlineHelpText>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidates_1st_Line_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Candidates 1st Line Supervisor</description>
        <inlineHelpText>Candidates 1st Line Supervisor</inlineHelpText>
        <label>Candidates 1st Line Supervisor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>X1st_Line_Supervisor_Role</value>
            </filterItems>
            <infoMessage>Please select your 1st Line Supervisors Name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Letters_of_Intent2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidates_2nd_Line_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Candidates 2nd Line Supervisor Name</description>
        <inlineHelpText>Candidates 2nd Line Supervisor Name</inlineHelpText>
        <label>Candidates 2nd Line Supervisor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>X2nd_Line_Supervisor_Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Letters_of_Intent3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentRegion__c</fullName>
        <description>Candidates EPA work region</description>
        <inlineHelpText>Candidates EPA work region</inlineHelpText>
        <label>Current Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_GS_Level__c</fullName>
        <description>Candidates Current GS Level</description>
        <inlineHelpText>Candidates Current GS Level</inlineHelpText>
        <label>Current GS Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GS 13</fullName>
                </value>
                <value>
                    <fullName>GS 14</fullName>
                </value>
                <value>
                    <fullName>GS 15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Lab_Work_Location_Assignment__c</fullName>
        <description>Candidates current physical work location</description>
        <inlineHelpText>Candidates current physical work location</inlineHelpText>
        <label>Current Lab Work Location Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National_Health_and_Environmental_Effects_Research_Lab</fullName>
                </value>
                <value>
                    <fullName>National_Exposure_Research_Lab</fullName>
                </value>
                <value>
                    <fullName>National_Risk_Management_Research_Lab</fullName>
                </value>
                <value>
                    <fullName>National_Center_for_Environmental_Assessment</fullName>
                </value>
                <value>
                    <fullName>National Center for Computational Toxicology</fullName>
                </value>
                <value>
                    <fullName>National Homeland Security Research Center</fullName>
                </value>
                <value>
                    <fullName>National Center for Environmental Research</fullName>
                </value>
                <value>
                    <fullName>National Research Programs</fullName>
                </value>
                <value>
                    <fullName>Immediate Office of the Assistant Administrator</fullName>
                </value>
                <value>
                    <fullName>Office of the Science Adviser</fullName>
                </value>
                <value>
                    <fullName>Office of Science Policy</fullName>
                </value>
                <value>
                    <fullName>Office of Science Information Management</fullName>
                </value>
                <value>
                    <fullName>Office of Program Accountability and Resource Management</fullName>
                </value>
                <value>
                    <fullName>Office of Administration and Research Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntendedTrack__c</fullName>
        <description>Candidates intended promotion track.</description>
        <inlineHelpText>Candidates intended promotion track.</inlineHelpText>
        <label>Intended Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Reject_Reason__c</fullName>
        <label>LOI Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet length of employment requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet education requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet experience requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet promotion prerequisite.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average performance review.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average peer review.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <description>Comments about the Letter of intent</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TQB Letter of Intent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Candidates_1st_Line_Supervisor_Name__c</columns>
        <columns>Candidates_2nd_Line_Supervisor_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_GS_Level__c</columns>
        <columns>Current_Lab_Work_Location_Assignment__c</columns>
        <columns>IntendedTrack__c</columns>
        <columns>CurrentRegion__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOI-{00000000}</displayFormat>
        <label>TQB Letter Of Intent</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB Letters of Intent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Conditional_status_approved</fullName>
        <active>false</active>
        <description>No reject reason should be selected when status is approved</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Rejected&quot;) = False  &amp;&amp;  ISBLANK( LOI_Reject_Reason__c ) = False</errorConditionFormula>
        <errorMessage>Reject reason should not be selected when status is other than Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conditional_status_rejected</fullName>
        <active>true</active>
        <description>user can select reject reasons only when status is rejected</description>
        <errorConditionFormula>$Profile.Name = &quot;TQB 1st Line Supervisor Profile&quot;  &amp;&amp; ISPICKVAL( Status__c ,&quot;Rejected&quot;)   &amp;&amp;  ISBLANK(TEXT( LOI_Reject_Reason__c ))</errorConditionFormula>
        <errorMessage>LOI Reject Reason should be selected when status is in Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_field_value_1st_supervisor</fullName>
        <active>true</active>
        <description>1st line supervisor should select any status value other than Not Started, Submitted</description>
        <errorConditionFormula>$Profile.Name =&quot;TQB 1st Line Supervisor Profile&quot;  &amp;&amp; (ISPICKVAL( Status__c , &quot;Not Started&quot;) || ISPICKVAL( Status__c , &quot;In Progress&quot;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Incorrect status value selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_value</fullName>
        <active>true</active>
        <description>Status field value should be valid one</description>
        <errorConditionFormula>$Profile.Name =&quot;TQB 1st Line Supervisor Profile&quot;  &amp;&amp;  ISBLANK(TEXT(  Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>condition_status_returned</fullName>
        <active>true</active>
        <description>if the user selects Returned as status value then review comments field should be filled out</description>
        <errorConditionFormula>$Profile.Name = &quot;TQB 1st Line Supervisor Profile&quot;  &amp;&amp; ISPICKVAL( Status__c ,&quot;Returned&quot;)  &amp;&amp;    LEN( Review_Comments__c ) = 0</errorConditionFormula>
        <errorMessage>Review comments should be filled out if the status is Returned</errorMessage>
    </validationRules>
</CustomObject>